update the example application config file and gitignore file.

--- a/src/main/resources/application.EXAMPLE.yml
+++ b/src/main/resources/application.EXAMPLE.yml
@@ -1,5 +1,5 @@
 rest.endpoint.configuration:
-  baseUrl: endpoint goes here
+  endPointUrl: endpoint goes here
   oauth2:
     client:
       grantType: client_credentials
